fix:WeakHashMap 테스트 코드